--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-3" />
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Confirmar Pedido</title>
   <style>
@@ -14,22 +14,28 @@
       background-color: #f6f6f6;
       margin: 0;
     }
+
     .container {
       text-align: center;
       background-color: #fff;
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-      max-width: 400px;
+      padding: 3rem;
+      border-radius: 16px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+      max-width: 500px;
+      width: 90%;
     }
+
     h1 {
-      color: #333;
-      margin-bottom: 1rem;
+      color: #ff7a00; /* naranja */
+      font-size: 1.8rem;
+      margin-bottom: 1.2rem;
     }
+
     p {
       font-size: 1.1rem;
       color: #555;
     }
+
     button {
       margin-top: 2rem;
       padding: 0.8rem 1.5rem;
@@ -39,12 +45,15 @@
       border: none;
       border-radius: 8px;
       cursor: pointer;
+      transition: background-color 0.2s ease;
     }
+
     button:hover {
       background-color: #218838;
     }
+
     .footer {
-      margin-top: 1.5rem;
+      margin-top: 2rem;
       font-size: 0.9rem;
       color: #777;
     }
